@@ -1968,7 +1968,7 @@ int libbde_metadata_get_volume_master_key(
 				 0 );
 			}
 #endif
-			/* TODO improve this check */
+/* TODO improve this check */
 			byte_stream_copy_to_uint16_little_endian(
 			 &( unencrypted_data[ 16 ] ),
 			 data_size );
@@ -2212,7 +2212,7 @@ int libbde_metadata_get_volume_master_key(
 				 0 );
 			}
 #endif
-			/* TODO improve this check */
+/* TODO improve this check */
 			byte_stream_copy_to_uint16_little_endian(
 			 &( unencrypted_data[ 16 ] ),
 			 data_size );
@@ -2456,7 +2456,7 @@ int libbde_metadata_get_volume_master_key(
 				 0 );
 			}
 #endif
-			/* TODO improve this check */
+/* TODO improve this check */
 			byte_stream_copy_to_uint16_little_endian(
 			 &( unencrypted_data[ 16 ] ),
 			 data_size );
@@ -2517,6 +2517,15 @@ int libbde_metadata_get_volume_master_key(
 			 unencrypted_data );
 		}
 	}
+	if( result == 0 )
+	{
+		/* Keys were set manually
+		 */
+		if( io_handle->keys_are_set != 0 )
+		{
+			result = 1;
+		}
+	}
 	return( result );
 
 on_error:
@@ -2543,6 +2552,7 @@ on_error:
  */
 int libbde_metadata_get_full_volume_encryption_key(
      libbde_metadata_t *metadata,
+     libbde_io_handle_t *io_handle,
      const uint8_t *volume_master_key,
      size_t volume_master_key_size,
      uint8_t *full_volume_encryption_key,
@@ -2591,6 +2601,17 @@ int libbde_metadata_get_full_volume_encryption_key(
 		 function );
 
 		goto on_error;
+	}
+	if( io_handle == NULL )
+	{
+		libcerror_error_set(
+		 error,
+		 LIBCERROR_ERROR_DOMAIN_ARGUMENTS,
+		 LIBCERROR_ARGUMENT_ERROR_INVALID_VALUE,
+		 "%s: invalid IO handle.",
+		 function );
+
+		return( -1 );
 	}
 	if( volume_master_key == NULL )
 	{
@@ -2749,7 +2770,7 @@ int libbde_metadata_get_full_volume_encryption_key(
 		 0 );
 	}
 #endif
-	/* TODO improve this check */
+/* TODO improve this check */
 	byte_stream_copy_to_uint16_little_endian(
 	 &( unencrypted_data[ 16 ] ),
 	 data_size );
@@ -2860,6 +2881,47 @@ int libbde_metadata_get_full_volume_encryption_key(
 		}
 		memory_free(
 		 unencrypted_data );
+	}
+	if( result == 0 )
+	{
+		/* Keys were set manually
+		 */
+		if( io_handle->keys_are_set != 0 )
+		{
+			if( memory_copy(
+			     full_volume_encryption_key,
+			     io_handle->full_volume_encryption_key,
+			     32 ) == NULL )
+			{
+				libcerror_error_set(
+				 error,
+				 LIBCERROR_ERROR_DOMAIN_MEMORY,
+				 LIBCERROR_MEMORY_ERROR_COPY_FAILED,
+				 "%s: unable to copy full volume encryption key.",
+				 function );
+
+				goto on_error;
+			}
+			if( io_handle->tweak_key_size > 0 )
+			{
+				if( memory_copy(
+				     tweak_key,
+				     io_handle->tweak_key,
+				     32 ) == NULL )
+				{
+					libcerror_error_set(
+					 error,
+					 LIBCERROR_ERROR_DOMAIN_MEMORY,
+					 LIBCERROR_MEMORY_ERROR_COPY_FAILED,
+					 "%s: unable to copy tweak key.",
+					 function );
+
+					goto on_error;
+				}
+			}
+/* TODO test external provided keys */
+			result = 1;
+		}
 	}
 	return( result );
 
